--- a/admin.html
+++ b/admin.html
@@ -292,8 +292,8 @@
                         </div>
                         <div class="form-group">
                             <div class="notify-checkbox">
-                                <input type="checkbox" id="configNotify" name="notify">
-                                <label for="configNotify">
+                                <input type="checkbox" id="macroNotify" name="notify">
+                                <label for="macroNotify">
                                     <span class="emoji">📢</span>
                                     Отправить уведомление в Telegram
                                 </label>
@@ -342,8 +342,8 @@
                         </div>
                         <div class="form-group">
                             <div class="notify-checkbox">
-                                <input type="checkbox" id="configNotify" name="notify">
-                                <label for="configNotify">
+                                <input type="checkbox" id="addonNotify" name="notify">
+                                <label for="addonNotify">
                                     <span class="emoji">📢</span>
                                     Отправить уведомление в Telegram
                                 </label>
@@ -384,8 +384,8 @@
                         </div>
                         <div class="form-group">
                             <div class="notify-checkbox">
-                                <input type="checkbox" id="configNotify" name="notify">
-                                <label for="configNotify">
+                                <input type="checkbox" id="guideNotify" name="notify">
+                                <label for="guideNotify">
                                     <span class="emoji">📢</span>
                                     Отправить уведомление в Telegram
                                 </label>
