--- a/test.html
+++ b/test.html
@@ -9,19 +9,24 @@
     <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/RFNNQ4RP/71a2c23b-f462-482a-8e89-f0c4336d3d98.jpg">
 </head>
 <body>
-    <header>
+    <header class="header-flag">
         <div class="container">
-            <div class="header-content">
-                <h1><img src="images/icons8-орда-world-of-warcraft-48.png" alt="Horde" class="horde-icon"> SegazbsHelper | Конфиги</h1>
-                <p class="subtitle">Готовые конфиги для популярных аддонов</p>
-            </div>
-            <nav>
-                <a href="index.html" class="active"><i class="fas fa-th-large"></i> Конфиги</a>
-                <a href="macros.html"><i class="fas fa-terminal"></i> Макросы</a>
-                <a href="addons.html"><i class="fas fa-puzzle-piece"></i> Аддоны</a>
-                <a href="guides.html"><i class="fas fa-video"></i> Гайды</a>
-                <a href="contribute.html" class="contribute-link">
-                    <i class="fas fa-plus-circle"></i> Добавить конфиг
+            <div class="horde-logo-large"></div>
+            <h1 class="header-title">SegazbsHelper</h1>
+            <p class="header-subtitle">Готовые конфиги для популярных аддонов</p>
+            
+            <nav class="header-nav">
+                <a href="index.html" class="nav-link active">
+                    <i class="fas fa-th-large"></i> Конфиги
+                </a>
+                <a href="macros.html" class="nav-link">
+                    <i class="fas fa-terminal"></i> Макросы
+                </a>
+                <a href="addons.html" class="nav-link">
+                    <i class="fas fa-puzzle-piece"></i> Аддоны
+                </a>
+                <a href="guides.html" class="nav-link">
+                    <i class="fas fa-video"></i> Гайды
                 </a>
             </nav>
         </div>
