--- a/test.html
+++ b/test.html
@@ -10,24 +10,21 @@
 </head>
 <body>
     <header class="header-flag">
-        <div class="container">
-            <div class="horde-logo-large"></div>
-            <h1 class="header-title">SegazbsHelper</h1>
-            <p class="header-subtitle">Готовые конфиги для популярных аддонов</p>
+        <div class="container" style="display: flex; align-items: center; justify-content: center; flex-direction: column;">
+            <div style="display: flex; align-items: center; margin-bottom: 15px;">
+                <div class="horde-logo-large"></div>
+                <div style="text-align: center; margin-left: 20px;">
+                    <h1 class="header-title">Aferist Helper</h1>
+                    <p class="header-subtitle">Помощник для World of Warcraft</p>
+                </div>
+            </div>
             
             <nav class="header-nav">
-                <a href="index.html" class="nav-link active">
-                    <i class="fas fa-th-large"></i> Конфиги
-                </a>
-                <a href="macros.html" class="nav-link">
-                    <i class="fas fa-terminal"></i> Макросы
-                </a>
-                <a href="addons.html" class="nav-link">
-                    <i class="fas fa-puzzle-piece"></i> Аддоны
-                </a>
-                <a href="guides.html" class="nav-link">
-                    <i class="fas fa-video"></i> Гайды
-                </a>
+                <a href="index.html">🏠 Главная</a>
+                <a href="macros.html">⚡ Макросы</a>
+                <a href="addons.html">🧩 Аддоны</a>
+                <a href="guides.html">📚 Гайды</a>
+                <a href="admin.html">🔧 Админка</a>
             </nav>
         </div>
     </header>
