--- a/test.html
+++ b/test.html
@@ -10,21 +10,25 @@
 </head>
 <body>
     <header class="header-flag">
-        <div class="container" style="display: flex; align-items: center; justify-content: center; flex-direction: column;">
-            <div style="display: flex; align-items: center; margin-bottom: 15px;">
-                <div class="horde-logo-large"></div>
-                <div style="text-align: center; margin-left: 20px;">
-                    <h1 class="header-title">Aferist Helper</h1>
-                    <p class="header-subtitle">Помощник для World of Warcraft</p>
+        <div class="header-content-flag">
+            <div class="header-left">
+                <div class="horde-logo-large">
+                    <img src="images/icons8-орда-world-of-warcraft-48.png" alt="Horde">
+                </div>
+                <div>
+                    <h1 class="header-title-flag">SegazbsHelper</h1>
+                    <p class="header-subtitle-flag">Помощник для World of Warcraft</p>
                 </div>
             </div>
             
-            <nav class="header-nav">
-                <a href="index.html">🏠 Главная</a>
-                <a href="macros.html">⚡ Макросы</a>
-                <a href="addons.html">🧩 Аддоны</a>
-                <a href="guides.html">📚 Гайды</a>
-                <a href="admin.html">🔧 Админка</a>
+            <nav class="nav-flag">
+                <a href="index.html" class="active"><i class="fas fa-th-large"></i> Конфиги</a>
+                <a href="macros.html"><i class="fas fa-terminal"></i> Макросы</a>
+                <a href="addons.html"><i class="fas fa-puzzle-piece"></i> Аддоны</a>
+                <a href="guides.html"><i class="fas fa-video"></i> Гайды</a>
+                <a href="contribute.html" class="contribute-link-flag">
+                    <i class="fas fa-plus-circle"></i> Добавить
+                </a>
             </nav>
         </div>
     </header>
