--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> SegazbsHelper </title>
+    <title> Segazbs Helper </title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/RFNNQ4RP/71a2c23b-f462-482a-8e89-f0c4336d3d98.jpg">
@@ -19,7 +19,7 @@
                     <img src="images/icons8-орда-world-of-warcraft-48.png" alt="Horde">
                 </div>
                 <div>
-                    <h1 class="header-title-flag">SegazbsHelper</h1>
+                    <h1 class="header-title-flag">SegaZBS Helper</h1>
                     <p class="header-subtitle-flag">Помощник для World of Warcraft</p>
                 </div>
             </div>
