--- a/addons.html
+++ b/addons.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> SegazbsHelper </title>
+    <title> Segazbs Helper </title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/RFNNQ4RP/71a2c23b-f462-482a-8e89-f0c4336d3d98.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
     <style>
         /* Дополнительные стили для страницы аддонов */
         .addons-hero {
@@ -325,20 +328,23 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="header-content">
-                <h1><img src="images/icons8-орда-world-of-warcraft-48.png" alt="Horde" class="horde-icon"> SegazbsHelper | Аддоны</h1>
-                <p class="subtitle">Все необходимые аддоны для работы конфигов</p>
+    <header class="header-flag">
+        <div class="header-content-flag">
+            <div class="header-left">
+                <div class="horde-logo-large">
+                    <img src="images/icons8-орда-world-of-warcraft-48.png" alt="Horde">
+                </div>
+                <div>
+                    <h1 class="header-title-flag">SegaZBS Helper</h1>
+                    <p class="header-subtitle-flag">Помощник для World of Warcraft</p>
+                </div>
             </div>
-            <nav>
+            
+            <nav class="nav-flag">
                 <a href="index.html"><i class="fas fa-th-large"></i> Конфиги</a>
                 <a href="macros.html"><i class="fas fa-terminal"></i> Макросы</a>
                 <a href="addons.html" class="active"><i class="fas fa-puzzle-piece"></i> Аддоны</a>
                 <a href="guides.html"><i class="fas fa-video"></i> Гайды</a>
-                <a href="contribute.html" class="contribute-link">
-                    <i class="fas fa-plus-circle"></i> Добавить конфиг
-                </a>
             </nav>
         </div>
     </header>
