--- a/test.html
+++ b/test.html
@@ -12,11 +12,31 @@
     <link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
     <style>
         /* Стили для главной страницы */
+        body {
+            background: #f5f5f5;
+            color: #333;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+
+        section {
+            width: 100%;
+            margin-bottom: 40px;
+            clear: both;
+        }
+
         .hero-section {
             background: linear-gradient(135deg, #2c3e50 0%, #4a69bd 100%);
             color: white;
             padding: 60px 0;
-            margin-bottom: 40px;
+            margin: 0 0 40px 0;
+            width: 100%;
         }
 
         .hero-content {
@@ -110,6 +130,26 @@
         .telegram { color: #0088cc; }
         .discord { color: #5865f2; }
 
+        /* Секции */
+        .social-section,
+        .about-section,
+        .events-section,
+        .cta-section {
+            margin-bottom: 60px;
+            padding: 0;
+        }
+
+        .social-section h2,
+        .about-section h2,
+        .events-section h2 {
+            color: #2c3e50;
+            margin-bottom: 30px;
+            font-size: 2em;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
         /* О стримере */
         .about-content {
             display: grid;
@@ -118,25 +158,49 @@
             margin-top: 30px;
         }
 
+        .about-text {
+            background: #fff;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            width: 100%;
+            box-sizing: border-box;
+        }
+
         .about-text h3 {
             color: #2c3e50;
             margin-bottom: 15px;
+            margin-top: 20px;
+        }
+
+        .about-text h3:first-of-type {
+            margin-top: 0;
+        }
+
+        .about-text p {
+            color: #666;
+            line-height: 1.8;
+            margin-bottom: 20px;
+            text-align: left;
         }
 
         .about-text ul {
             list-style: none;
             padding: 0;
+            margin: 0;
         }
 
         .about-text li {
             margin-bottom: 10px;
             display: flex;
             align-items: center;
+            color: #666;
         }
 
         .about-text li i {
             color: #27ae60;
             margin-right: 10px;
+            flex-shrink: 0;
         }
 
         .about-stats {
@@ -222,6 +286,77 @@
             font-weight: bold;
         }
 
+        /* Призыв к действию */
+        .cta-section {
+            background: linear-gradient(135deg, #4a69bd 0%, #2c3e50 100%);
+            color: white;
+            padding: 60px 20px;
+            border-radius: 15px;
+            margin-top: 40px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+
+        .cta-content {
+            text-align: center;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        .cta-content h2 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+            color: white;
+        }
+
+        .cta-content p {
+            font-size: 1.2em;
+            margin-bottom: 30px;
+            opacity: 0.9;
+        }
+
+        .cta-buttons {
+            display: flex;
+            gap: 20px;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        .cta-btn {
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            padding: 15px 30px;
+            border-radius: 10px;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1.1em;
+            transition: all 0.3s ease;
+        }
+
+        .cta-btn.primary {
+            background: #9146ff;
+            color: white;
+        }
+
+        .cta-btn.primary:hover {
+            background: #7c3aed;
+            transform: translateY(-2px);
+            box-shadow: 0 5px 20px rgba(145, 70, 255, 0.4);
+        }
+
+        .cta-btn.secondary {
+            background: rgba(255, 255, 255, 0.2);
+            color: white;
+            border: 2px solid white;
+        }
+
+        .cta-btn.secondary:hover {
+            background: rgba(255, 255, 255, 0.3);
+            transform: translateY(-2px);
+        }
+
         /* Адаптивность */
         @media (max-width: 768px) {
             .hero-content {
@@ -239,6 +374,15 @@
             
             .events-grid {
                 grid-template-columns: 1fr;
+            }
+
+            .cta-buttons {
+                flex-direction: column;
+            }
+
+            .cta-btn {
+                width: 100%;
+                justify-content: center;
             }
         }
     </style>
