--- a/test.html
+++ b/test.html
@@ -11,10 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
     <style>
-        /* Стили для главной страницы */
+        /* Стили для главной страницы - темная тема с красными акцентами */
         body {
-            background: #f5f5f5;
-            color: #333;
+            background: linear-gradient(135deg, var(--darker) 0%, var(--dark) 100%);
+            color: var(--light);
         }
 
         .container {
@@ -32,11 +32,13 @@
         }
 
         .hero-section {
-            background: linear-gradient(135deg, #2c3e50 0%, #4a69bd 100%);
+            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
             color: white;
             padding: 60px 0;
             margin: 0 0 40px 0;
             width: 100%;
+            border-radius: 12px;
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.4);
         }
 
         .hero-content {
@@ -78,7 +80,7 @@
 
         .stream-schedule h3 {
             margin-bottom: 10px;
-            color: #f39c12;
+            color: var(--accent);
         }
 
         /* Социальные сети */
@@ -95,17 +97,21 @@
             align-items: center;
             padding: 30px 20px;
             text-decoration: none;
-            color: #333;
-            background: #fff;
+            color: var(--light);
+            background: var(--card-bg);
+            border: 1px solid var(--border);
             border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
             transition: all 0.3s ease;
             text-align: center;
+            backdrop-filter: blur(10px);
         }
 
         .social-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+            box-shadow: 0 8px 25px rgba(0,0,0,0.4);
+            border-color: rgba(255, 69, 0, 0.3);
+            background: var(--hover-bg);
         }
 
         .social-card i {
@@ -117,18 +123,19 @@
             font-weight: bold;
             font-size: 1.2em;
             margin-bottom: 10px;
+            color: var(--lighter);
         }
 
         .social-card p {
-            color: #666;
+            color: rgba(255, 255, 255, 0.7);
             font-size: 0.9em;
         }
 
-        .twitch { color: #9146ff; }
-        .youtube { color: #ff0000; }
-        .vk { color: #4a76a8; }
-        .telegram { color: #0088cc; }
-        .discord { color: #5865f2; }
+        .twitch i { color: #9146ff; }
+        .youtube i { color: #ff0000; }
+        .vk i { color: #4a76a8; }
+        .telegram i { color: #0088cc; }
+        .discord i { color: #5865f2; }
 
         /* Секции */
         .social-section,
@@ -142,7 +149,7 @@
         .social-section h2,
         .about-section h2,
         .events-section h2 {
-            color: #2c3e50;
+            color: var(--lighter);
             margin-bottom: 30px;
             font-size: 2em;
             display: flex;
@@ -159,16 +166,18 @@
         }
 
         .about-text {
-            background: #fff;
+            background: var(--card-bg);
+            border: 1px solid var(--border);
             padding: 30px;
             border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
             width: 100%;
             box-sizing: border-box;
+            backdrop-filter: blur(10px);
         }
 
         .about-text h3 {
-            color: #2c3e50;
+            color: var(--accent);
             margin-bottom: 15px;
             margin-top: 20px;
         }
@@ -178,7 +187,7 @@
         }
 
         .about-text p {
-            color: #666;
+            color: rgba(255, 255, 255, 0.8);
             line-height: 1.8;
             margin-bottom: 20px;
             text-align: left;
@@ -194,11 +203,11 @@
             margin-bottom: 10px;
             display: flex;
             align-items: center;
-            color: #666;
+            color: rgba(255, 255, 255, 0.8);
         }
 
         .about-text li i {
-            color: #27ae60;
+            color: var(--accent);
             margin-right: 10px;
             flex-shrink: 0;
         }
@@ -210,23 +219,29 @@
         }
 
         .stat-card {
-            background: #f8f9fa;
+            background: var(--card-bg);
+            border: 1px solid var(--border);
             padding: 20px;
             border-radius: 10px;
             text-align: center;
-            border-left: 4px solid #4a69bd;
+            border-left: 4px solid var(--accent);
+            backdrop-filter: blur(10px);
         }
 
         .stat-card i {
             font-size: 2em;
-            color: #4a69bd;
+            color: var(--accent);
             margin-bottom: 10px;
         }
 
         .stat-card h4 {
             font-size: 1.5em;
             margin: 10px 0;
-            color: #2c3e50;
+            color: var(--lighter);
+        }
+
+        .stat-card p {
+            color: rgba(255, 255, 255, 0.7);
         }
 
         /* Ивенты */
@@ -239,14 +254,23 @@
 
         .event-card {
             display: flex;
-            background: #fff;
+            background: var(--card-bg);
+            border: 1px solid var(--border);
             border-radius: 15px;
             overflow: hidden;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+            backdrop-filter: blur(10px);
+            transition: all 0.3s ease;
+        }
+
+        .event-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 25px rgba(0,0,0,0.4);
+            border-color: rgba(255, 69, 0, 0.3);
         }
 
         .event-date {
-            background: #4a69bd;
+            background: linear-gradient(135deg, var(--accent), var(--accent-dark));
             color: white;
             padding: 20px;
             text-align: center;
@@ -273,28 +297,30 @@
 
         .event-info h3 {
             margin-bottom: 10px;
-            color: #2c3e50;
+            color: var(--lighter);
         }
 
         .event-info p {
-            color: #666;
+            color: rgba(255, 255, 255, 0.7);
             margin-bottom: 10px;
         }
 
         .event-time {
-            color: #e74c3c;
+            color: var(--accent);
             font-weight: bold;
         }
 
         /* Призыв к действию */
         .cta-section {
-            background: linear-gradient(135deg, #4a69bd 0%, #2c3e50 100%);
+            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
             color: white;
             padding: 60px 20px;
             border-radius: 15px;
             margin-top: 40px;
             width: 100%;
             box-sizing: border-box;
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.4);
+            border: 1px solid rgba(255, 69, 0, 0.2);
         }
 
         .cta-content {
@@ -336,24 +362,24 @@
         }
 
         .cta-btn.primary {
-            background: #9146ff;
-            color: white;
+            background: linear-gradient(90deg, var(--accent), var(--accent-dark));
+            color: var(--dark);
         }
 
         .cta-btn.primary:hover {
-            background: #7c3aed;
             transform: translateY(-2px);
-            box-shadow: 0 5px 20px rgba(145, 70, 255, 0.4);
+            box-shadow: 0 5px 20px rgba(204, 55, 0, 0.4);
         }
 
         .cta-btn.secondary {
-            background: rgba(255, 255, 255, 0.2);
+            background: rgba(255, 255, 255, 0.1);
             color: white;
-            border: 2px solid white;
+            border: 2px solid rgba(255, 255, 255, 0.3);
         }
 
         .cta-btn.secondary:hover {
-            background: rgba(255, 255, 255, 0.3);
+            background: rgba(255, 255, 255, 0.2);
+            border-color: rgba(255, 255, 255, 0.5);
             transform: translateY(-2px);
         }
 
