--- a/test.html
+++ b/test.html
@@ -312,15 +312,16 @@
 
         /* Призыв к действию */
         .cta-section {
-            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
-            color: white;
+            background: var(--card-bg);
+            border: 2px solid var(--accent);
+            color: var(--light);
             padding: 60px 20px;
             border-radius: 15px;
             margin-top: 40px;
             width: 100%;
             box-sizing: border-box;
-            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.4);
-            border: 1px solid rgba(255, 69, 0, 0.2);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            backdrop-filter: blur(10px);
         }
 
         .cta-content {
@@ -333,13 +334,13 @@
         .cta-content h2 {
             font-size: 2.5em;
             margin-bottom: 20px;
-            color: white;
+            color: var(--lighter);
         }
 
         .cta-content p {
             font-size: 1.2em;
             margin-bottom: 30px;
-            opacity: 0.9;
+            color: rgba(255, 255, 255, 0.8);
         }
 
         .cta-buttons {
@@ -372,14 +373,14 @@
         }
 
         .cta-btn.secondary {
-            background: rgba(255, 255, 255, 0.1);
-            color: white;
-            border: 2px solid rgba(255, 255, 255, 0.3);
+            background: rgba(255, 255, 255, 0.05);
+            color: var(--light);
+            border: 2px solid var(--accent);
         }
 
         .cta-btn.secondary:hover {
-            background: rgba(255, 255, 255, 0.2);
-            border-color: rgba(255, 255, 255, 0.5);
+            background: rgba(204, 55, 0, 0.1);
+            border-color: var(--accent);
             transform: translateY(-2px);
         }
 
