--- a/test.html
+++ b/test.html
@@ -61,7 +61,8 @@
         .hero-text h1 {
             font-size: 2.5em;
             margin-bottom: 20px;
-            font-family: 'New Rocker', cursive;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-weight: 600;
         }
 
         .hero-description {
@@ -444,7 +445,7 @@
                     <img src="https://i.postimg.cc/RFNNQ4RP/71a2c23b-f462-482a-8e89-f0c4336d3d98.jpg" alt="SegaZBS" class="streamer-avatar">
                 </div>
                 <div class="hero-text">
-                    <h1>Добро пожаловать на мой стрим!</h1>
+                    <h1>Добро пожаловать на мой сайт!</h1>
                     <p class="hero-description">
                         Привет! Я SegaZBS - стример World of Warcraft. Стримлю PvP, рейды, фарм и просто весело проводим время в Азероте. 
                         Присоединяйся к сообществу и давайте играть вместе!
@@ -526,48 +527,6 @@
                         <i class="fas fa-video"></i>
                         <h4>500+</h4>
                         <p>стримов</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Предстоящие ивенты -->
-        <section class="events-section">
-            <h2><i class="fas fa-calendar-star"></i> Ближайшие ивенты</h2>
-            <div class="events-grid">
-                <div class="event-card">
-                    <div class="event-date">
-                        <span class="day">20</span>
-                        <span class="month">Янв</span>
-                    </div>
-                    <div class="event-info">
-                        <h3>PvP Турнир 3v3</h3>
-                        <p>Арена на призы от спонсоров</p>
-                        <span class="event-time"><i class="fas fa-clock"></i> 20:00 МСК</span>
-                    </div>
-                </div>
-                
-                <div class="event-card">
-                    <div class="event-date">
-                        <span class="day">25</span>
-                        <span class="month">Янв</span>
-                    </div>
-                    <div class="event-info">
-                        <h3>Рейд ICC 25HC</h3>
-                        <p>Проходим Ледяную Цитадель на героике</p>
-                        <span class="event-time"><i class="fas fa-clock"></i> 19:00 МСК</span>
-                    </div>
-                </div>
-                
-                <div class="event-card">
-                    <div class="event-date">
-                        <span class="day">28</span>
-                        <span class="month">Янв</span>
-                    </div>
-                    <div class="event-info">
-                        <h3>Q&A Сессия</h3>
-                        <p>Отвечаю на ваши вопросы о WoW</p>
-                        <span class="event-time"><i class="fas fa-clock"></i> 18:00 МСК</span>
                     </div>
                 </div>
             </div>
