--- a/test.html
+++ b/test.html
@@ -385,6 +385,78 @@
             transform: translateY(-2px);
         }
 
+        /* Рекламные баннеры */
+        .ad-banner {
+            background: var(--card-bg);
+            border: 1px solid var(--border);
+            border-radius: 12px;
+            padding: 20px;
+            margin: 30px 0;
+            text-align: center;
+            backdrop-filter: blur(10px);
+            transition: all 0.3s ease;
+        }
+
+        .ad-banner:hover {
+            border-color: rgba(255, 69, 0, 0.3);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        .ad-banner.horizontal {
+            max-width: 100%;
+        }
+
+        .ad-banner.vertical {
+            max-width: 300px;
+            margin: 30px auto;
+        }
+
+        .ad-banner-label {
+            display: inline-block;
+            background: rgba(255, 255, 255, 0.1);
+            color: rgba(255, 255, 255, 0.6);
+            font-size: 0.7rem;
+            padding: 4px 8px;
+            border-radius: 4px;
+            margin-bottom: 10px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .ad-banner-content {
+            color: var(--light);
+            font-size: 0.9rem;
+            line-height: 1.6;
+        }
+
+        .ad-banner-content h4 {
+            color: var(--accent);
+            margin-bottom: 10px;
+            font-size: 1.1rem;
+        }
+
+        .ad-banner-content p {
+            color: rgba(255, 255, 255, 0.7);
+            margin-bottom: 15px;
+        }
+
+        .ad-banner-link {
+            display: inline-block;
+            background: linear-gradient(90deg, var(--accent), var(--accent-dark));
+            color: var(--dark);
+            padding: 10px 20px;
+            border-radius: 8px;
+            text-decoration: none;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            margin-top: 10px;
+        }
+
+        .ad-banner-link:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(204, 55, 0, 0.3);
+        }
+
         /* Адаптивность */
         @media (max-width: 768px) {
             .hero-content {
@@ -495,6 +567,16 @@
             </div>
         </section>
 
+        <!-- Рекламный баннер 1 -->
+        <div class="ad-banner horizontal">
+            <div class="ad-banner-label">Реклама</div>
+            <div class="ad-banner-content">
+                <h4>🎮 Игровой сервер WoW 3.3.5</h4>
+                <p>Присоединяйся к лучшему серверу WotLK! Стабильный пинг, активное сообщество, регулярные ивенты.</p>
+                <a href="#" class="ad-banner-link">Узнать больше →</a>
+            </div>
+        </div>
+
         <!-- О стримере -->
         <section class="about-section">
             <h2><i class="fas fa-user"></i> Обо мне</h2>
@@ -531,6 +613,16 @@
                 </div>
             </div>
         </section>
+
+        <!-- Рекламный баннер 2 -->
+        <div class="ad-banner horizontal">
+            <div class="ad-banner-label">Реклама</div>
+            <div class="ad-banner-content">
+                <h4>💎 Премиум аддоны для WoW</h4>
+                <p>Улучши свой геймплей с нашими премиум аддонами. Скидка 20% для подписчиков канала!</p>
+                <a href="#" class="ad-banner-link">Посмотреть каталог →</a>
+            </div>
+        </div>
 
         <!-- Призыв к действию -->
         <section class="cta-section">
