--- a/test.html
+++ b/test.html
@@ -32,13 +32,23 @@
         }
 
         .hero-section {
-            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
+            background: linear-gradient(
+                135deg,
+                #450000 0%,
+                #300000 25%,
+                #450000 50%,
+                #300000 75%,
+                #450000 100%
+            );
             color: white;
             padding: 60px 0;
             margin: 0 0 40px 0;
             width: 100%;
             border-radius: 12px;
-            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.4);
+            box-shadow: 0 8px 35px rgba(0, 0, 0, 0.6);
+            border-bottom: 3px solid #700000;
+            position: relative;
+            overflow: hidden;
         }
 
         .hero-content {
