--- a/test.html
+++ b/test.html
@@ -731,9 +731,9 @@
                 <div class="support-banner-content">
                     <p class="support-banner-text">
                         <i class="fas fa-heart"></i>
-                        Сайт создан подписчиком для вашего удобства. Если хотите поддержать разработку:
+                        Сайт создан подписчиком <strong>Николай Буров</strong> (@n_burov - TG) для вашего удобства. Если хотите поддержать разработку:
                     </p>
-                    <a href="https://boosty.to/your-profile" target="_blank" class="support-banner-link">
+                    <a href="https://boosty.to/n_burov" target="_blank" class="support-banner-link">
                         <i class="fas fa-hand-holding-heart"></i>
                         Поддержать на Boosty
                     </a>
