--- a/test.html
+++ b/test.html
@@ -726,16 +726,16 @@
                 </div>
             </div>
             
-            <!-- Плашка поддержки разработчика -->
+            <!-- Плашка сообщества -->
             <div class="support-banner">
                 <div class="support-banner-content">
                     <p class="support-banner-text">
-                        <i class="fas fa-heart"></i>
-                        Сайт создан подписчиком <strong>Николай Буров</strong> (@n_burov - TG) для вашего удобства. Если хотите поддержать разработку:
+                        <i class="fas fa-users"></i>
+                        Присоединяйся к нашему сообществу в Telegram! Будь в курсе новых стримов, ивентов и общайся с другими фанатами WoW.
                     </p>
-                    <a href="https://boosty.to/n_burov" target="_blank" class="support-banner-link">
-                        <i class="fas fa-hand-holding-heart"></i>
-                        Поддержать на Boosty
+                    <a href="https://t.me/segazbs" target="_blank" class="support-banner-link">
+                        <i class="fab fa-telegram"></i>
+                        Подписаться на Telegram-канал
                     </a>
                 </div>
             </div>
