--- a/index.html
+++ b/index.html
@@ -67,11 +67,10 @@
     <div class="container">
         <!-- Информационный баннер -->
         <div class="info-banner">
-            <i class="fas fa-sync-alt"></i>
+            <i class="fas fa-exclamation-triangle"></i>
             <div>
-                <strong>Конфиги обновляются автоматически</strong>
-                <p>Все изменения в репозитории GitHub сразу отображаются на сайте</p>
-                <a href="contribute.html" class="banner-link">Хотите добавить свой конфиг? →</a>
+                <strong>ВНИМАНИЕ!</strong>
+                <p>Для корректной работы конфигов все аддоны должны быть обновлены до последней версии. Используйте программу AddonUpdater, которую можно скачать на <a href="addons.html">странице с аддонами</a></p>
             </div>
         </div>
 
