--- a/addons.html
+++ b/addons.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Segazbs Helper </title>
+    <link rel="canonical" href="https://segazbs.info/addons.html">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/RFNNQ4RP/71a2c23b-f462-482a-8e89-f0c4336d3d98.jpg">
@@ -341,7 +342,7 @@
             </div>
             
             <nav class="nav-flag">
-                <a href="index.html"><i class="fas fa-th-large"></i> Конфиги</a>
+                <a href="configs.html"><i class="fas fa-th-large"></i> Конфиги</a>
                 <a href="macros.html"><i class="fas fa-terminal"></i> Макросы</a>
                 <a href="addons.html" class="active"><i class="fas fa-puzzle-piece"></i> Аддоны</a>
                 <a href="guides.html"><i class="fas fa-video"></i> Гайды</a>
