--- a/contribute.html
+++ b/contribute.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> AferistHelper </title>
+    <link rel="canonical" href="https://segazbs.info/contribute.html">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="https://wow.zamimg.com/images/wow/icons/large/inv_misc_head_dragon_01.jpg">
@@ -438,7 +439,7 @@
                 <p class="subtitle">Поделитесь своими конфигами с сообществом</p>
             </div>
             <nav>
-                <a href="index.html"><i class="fas fa-th-large"></i> Конфиги</a>
+                <a href="configs.html"><i class="fas fa-th-large"></i> Конфиги</a>
                 <a href="macros.html"><i class="fas fa-terminal"></i> Макросы</a>
                 <a href="addons.html"><i class="fas fa-puzzle-piece"></i> Аддоны</a>
                 <a href="contribute.html" class="active contribute-link">
