--- a/index.html
+++ b/index.html
@@ -513,7 +513,8 @@
             </div>
             
             <nav class="nav-flag">
-                <a href="configs.html" class="active"><i class="fas fa-th-large"></i> Конфиги</a>
+                <a href="index.html" class="active"><i class="fas fa-home"></i> Главная</a>
+                <a href="configs.html"><i class="fas fa-th-large"></i> Конфиги</a>
                 <a href="macros.html"><i class="fas fa-terminal"></i> Макросы</a>
                 <a href="addons.html"><i class="fas fa-puzzle-piece"></i> Аддоны</a>
                 <a href="guides.html"><i class="fas fa-video"></i> Гайды</a>
