--- a/addons.html
+++ b/addons.html
@@ -342,6 +342,7 @@
             </div>
             
             <nav class="nav-flag">
+                <a href="index.html"><i class="fas fa-home"></i> Главная</a>
                 <a href="configs.html"><i class="fas fa-th-large"></i> Конфиги</a>
                 <a href="macros.html"><i class="fas fa-terminal"></i> Макросы</a>
                 <a href="addons.html" class="active"><i class="fas fa-puzzle-piece"></i> Аддоны</a>
