--- a/index.html
+++ b/index.html
@@ -537,8 +537,8 @@
                     </p>
                     <div class="stream-schedule">
                         <h3><i class="fas fa-calendar-alt"></i> Расписание стримов:</h3>
-                        <p>Пн-Пт: 19:00 - 23:00 (МСК)</p>
-                        <p>Сб-Вс: 15:00 - 22:00 (МСК)</p>
+                        <p>Стримы проходят ежедневно!</p>
+                        <p>Следите за анонсами в нашем ТГ канале!</p>
                     </div>
                 </div>
             </div>
