--- a/index.html
+++ b/index.html
@@ -532,8 +532,8 @@
                 <div class="hero-text">
                     <h1>Добро пожаловать на мой сайт!</h1>
                     <p class="hero-description">
-                        Привет! Я SegaZBS - стример World of Warcraft. Стримлю PvP, рейды, фарм и просто весело проводим время в Азероте. 
-                        Присоединяйся к сообществу и давайте играть вместе!
+                        Здорова, братец! Я SegaZBS - стример World of Warcraft. Вещаю рейды, фарм и всякие приключения в Азероте, где мы весело проводим время и строим эпичные моменты. 
+                        Заходи в наше комьюнити - будет интересно!
                     </p>
                     <div class="stream-schedule">
                         <h3><i class="fas fa-calendar-alt"></i> Расписание стримов:</h3>
@@ -596,8 +596,8 @@
             <div class="about-content">
                 <div class="about-text">
                     <h3>Почему WoW?</h3>
-                    <p>Играю в World of Warcraft с 2008 года. Люблю PvP, рейдовый контент и создание контента для сообщества. 
-                    На моих стримах ты найдешь не только геймплей, но и полезные советы по аддонам, макросам и геймплею.</p>
+                    <p>Добро пожаловать! Меня зовут Артур, и я искренне стараюсь сделать твое пребывание здесь максимально комфортным и интересным. 
+                    На стримах ты найдешь увлекательный геймплей, полезные советы и живое общение.</p>
                     
                     <h3>Что ждать от стримов?</h3>
                     <ul>
@@ -615,12 +615,12 @@
                     </div>
                     <div class="stat-card">
                         <i class="fas fa-users"></i>
-                        <h4>1000+</h4>
+                        <h4>37000+</h4>
                         <p>подписчиков</p>
                     </div>
                     <div class="stat-card">
                         <i class="fas fa-video"></i>
-                        <h4>500+</h4>
+                        <h4>2000+</h4>
                         <p>стримов</p>
                     </div>
                 </div>
