--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
             padding: 20px;
             border-radius: 10px;
             backdrop-filter: blur(10px);
+            max-width: 400px;
+            margin: 0 auto;
         }
 
         .stream-schedule h3 {
@@ -532,8 +534,8 @@
                 <div class="hero-text">
                     <h1>Добро пожаловать на мой сайт!</h1>
                     <p class="hero-description">
-                        Здорова, братец! Я SegaZBS - стример World of Warcraft. Вещаю рейды, фарм и всякие приключения в Азероте, где мы весело проводим время и строим эпичные моменты. 
-                        Заходи в наше комьюнити - будет интересно!
+                        Здорова, братец! Это сайт-хранилище всех конфигов для аддонов, гайдов, макросов и полезных материалов для World of Warcraft от стримера SegaZBS. 
+                        Здесь ты найдешь всё необходимое для настройки своего клиента под стиль игры стримера - заходи, будет полезно!
                     </p>
                     <div class="stream-schedule">
                         <h3><i class="fas fa-calendar-alt"></i> Расписание стримов:</h3>
