--- a/index.html
+++ b/index.html
@@ -578,6 +578,12 @@
                     <span>Discord</span>
                     <p>Сообщество и общение</p>
                 </a>
+                
+                <a href="https://boosty.to/segazbs" target="_blank" class="social-card boosty">
+                    <i class="fas fa-heart"></i>
+                    <span>Boosty</span>
+                    <p>Поддержка стримера</p>
+                </a>
             </div>
         </section>
 
