--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
             <div class="ad-banner-content">
                 <h4>🎮 Игровой сервер WoW 3.3.5</h4>
                 <p>Присоединяйся к лучшему серверу WotLK! Стабильный пинг, активное сообщество, регулярные ивенты.</p>
-                <a href="#" class="ad-banner-link">Узнать больше →</a>
+                <a href="https://sirus-game.ru/" target="_blank" class="ad-banner-link">Узнать больше →</a>
             </div>
         </div>
 
