--- a/index.html
+++ b/index.html
@@ -342,12 +342,15 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 0 20px;
+            word-wrap: break-word;
+            overflow-wrap: break-word;
         }
 
         .cta-content h2 {
             font-size: 2.5em;
             margin-bottom: 20px;
             color: var(--lighter);
+            word-break: break-word;
         }
 
         .cta-content p {
@@ -373,6 +376,8 @@
             font-weight: bold;
             font-size: 1.1em;
             transition: all 0.3s ease;
+            min-width: 200px;
+            justify-content: center;
         }
 
         .cta-btn.primary {
@@ -587,16 +592,6 @@
             </div>
         </section>
 
-        <!-- Рекламный баннер 1 -->
-        <div class="ad-banner horizontal">
-            <div class="ad-banner-label">Реклама</div>
-            <div class="ad-banner-content">
-                <h4>🎮 Игровой сервер WoW 3.3.5</h4>
-                <p>Присоединяйся к лучшему серверу WotLK! Стабильный пинг, активное сообщество, регулярные ивенты.</p>
-                <a href="https://sirus-game.ru/" target="_blank" class="ad-banner-link">Узнать больше →</a>
-            </div>
-        </div>
-
         <!-- О стримере -->
         <section class="about-section">
             <h2><i class="fas fa-user"></i> Обо мне</h2>
@@ -633,16 +628,6 @@
                 </div>
             </div>
         </section>
-
-        <!-- Рекламный баннер 2 -->
-        <div class="ad-banner horizontal">
-            <div class="ad-banner-label">Реклама</div>
-            <div class="ad-banner-content">
-                <h4>💎 Премиум аддоны для WoW</h4>
-                <p>Улучши свой геймплей с нашими премиум аддонами. Скидка 20% для подписчиков канала!</p>
-                <a href="#" class="ad-banner-link">Посмотреть каталог →</a>
-            </div>
-        </div>
 
         <!-- Призыв к действию -->
         <section class="cta-section">
