--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                 <a href="https://t.me/segazbs" target="_blank" class="social-card telegram">
                     <i class="fab fa-telegram"></i>
                     <span>Telegram</span>
-                    <p>Основное сообщество, уведомления о новых видео и стримах</p>
+                    <p>Общение, уведомления</p>
                 </a>
                 
                 <a href="https://twitch.tv/segazbs" target="_blank" class="social-card twitch">
