--- a/index.html
+++ b/index.html
@@ -547,6 +547,11 @@
                         <p>Следите за анонсами в нашем ТГ канале!</p>
                     </div>
                 </div>
+                <div class="neverest-promo">
+                    <img src="images/logo_neverest.webp" alt="Neverest Logo" class="neverest-logo">
+                    <p class="neverest-text">Хочешь играть со стримером? Жми!</p>
+                    <button class="neverest-btn" onclick="window.open('YOUR_REFERRAL_LINK_HERE', '_blank')">Присоединиться</button>
+                </div>
             </div>
         </section>
 
@@ -557,7 +562,7 @@
                 <a href="https://t.me/segazbs" target="_blank" class="social-card telegram">
                     <i class="fab fa-telegram"></i>
                     <span>Telegram</span>
-                    <p>Общение, уведомления</p>
+                    <p>Основное сообщество, уведомления о новых видео и стримах</p>
                 </a>
                 
                 <a href="https://twitch.tv/segazbs" target="_blank" class="social-card twitch">
