--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                 <div class="neverest-promo">
                     <img src="images/logo_neverest.webp" alt="Neverest Logo" class="neverest-logo">
                     <p class="neverest-text">Хочешь играть со стримером? Жми!</p>
-                    <button class="neverest-btn" onclick="window.open('YOUR_REFERRAL_LINK_HERE', '_blank')">Присоединиться</button>
+                    <button class="neverest-btn" onclick="window.open('https://sirus.one/registration?ref=2486373&utm_source=segazbs&utm_medium=twitch', '_blank')">Присоединиться</button>
                 </div>
             </div>
         </section>
