--- a/index.html
+++ b/index.html
@@ -549,8 +549,8 @@
                 </div>
                 <div class="neverest-promo">
                     <img src="images/logo_neverest.webp" alt="Neverest Logo" class="neverest-logo">
-                    <p class="neverest-text">Хочешь играть со стримером? Жми!</p>
-                    <button class="neverest-btn" onclick="window.open('https://sirus.one/registration?ref=2486373&utm_source=segazbs&utm_medium=twitch', '_blank')">Присоединиться</button>
+                    <p class="neverest-text">Хочешь играть со стримером и получить подгон при достижении 20 уровня?</p>
+                    <button class="neverest-btn" onclick="window.open('https://sirus.one/registration?ref=2486373&utm_source=segazbs&utm_medium=twitch', '_blank')">Хочу!</button>
                 </div>
             </div>
         </section>
