--- a/index.html
+++ b/index.html
@@ -549,8 +549,8 @@
                 </div>
                 <div class="neverest-promo">
                     <img src="images/logo_neverest.webp" alt="Neverest Logo" class="neverest-logo">
-                    <p class="neverest-text">Хочешь подгон от стримера на 20 уровне?</p>
-                    <button class="neverest-btn" onclick="window.open('https://sirus.one/registration?ref=2486373&utm_source=segazbs&utm_medium=twitch', '_blank')">Хочу!</button>
+                    <p class="neverest-text">Хочешь играть со стримером? Жми!</p>
+                    <button class="neverest-btn" onclick="window.open('https://sirus.one/registration?ref=2486373&utm_source=segazbs&utm_medium=twitch', '_blank')">Присоединиться</button>
                 </div>
             </div>
         </section>
@@ -629,6 +629,79 @@
                         <i class="fas fa-video"></i>
                         <h4>2000+</h4>
                         <p>стримов</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Топ донатеров -->
+        <section class="donors-section">
+            <div class="donors-grid">
+                <div class="donor-card">
+                    <div class="donor-header">
+                        <i class="fab fa-twitch"></i>
+                        <h3>Топ донатеры Twitch</h3>
+                    </div>
+                    <div class="donor-list">
+                        <div class="donor-item">
+                            <span class="donor-rank">#1</span>
+                            <span class="donor-name">TwitchUser1</span>
+                            <span class="donor-amount">5000 ₽</span>
+                        </div>
+                        <div class="donor-item">
+                            <span class="donor-rank">#2</span>
+                            <span class="donor-name">TwitchUser2</span>
+                            <span class="donor-amount">3500 ₽</span>
+                        </div>
+                        <div class="donor-item">
+                            <span class="donor-rank">#3</span>
+                            <span class="donor-name">TwitchUser3</span>
+                            <span class="donor-amount">2800 ₽</span>
+                        </div>
+                        <div class="donor-item">
+                            <span class="donor-rank">#4</span>
+                            <span class="donor-name">TwitchUser4</span>
+                            <span class="donor-amount">1900 ₽</span>
+                        </div>
+                        <div class="donor-item">
+                            <span class="donor-rank">#5</span>
+                            <span class="donor-name">TwitchUser5</span>
+                            <span class="donor-amount">1200 ₽</span>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="donor-card">
+                    <div class="donor-header">
+                        <i class="fas fa-heart"></i>
+                        <h3>Топ донатеры Boosty</h3>
+                    </div>
+                    <div class="donor-list">
+                        <div class="donor-item">
+                            <span class="donor-rank">#1</span>
+                            <span class="donor-name">BoostyUser1</span>
+                            <span class="donor-amount">7200 ₽</span>
+                        </div>
+                        <div class="donor-item">
+                            <span class="donor-rank">#2</span>
+                            <span class="donor-name">BoostyUser2</span>
+                            <span class="donor-amount">4800 ₽</span>
+                        </div>
+                        <div class="donor-item">
+                            <span class="donor-rank">#3</span>
+                            <span class="donor-name">BoostyUser3</span>
+                            <span class="donor-amount">3600 ₽</span>
+                        </div>
+                        <div class="donor-item">
+                            <span class="donor-rank">#4</span>
+                            <span class="donor-name">BoostyUser4</span>
+                            <span class="donor-amount">2400 ₽</span>
+                        </div>
+                        <div class="donor-item">
+                            <span class="donor-rank">#5</span>
+                            <span class="donor-name">BoostyUser5</span>
+                            <span class="donor-amount">1800 ₽</span>
+                        </div>
                     </div>
                 </div>
             </div>
