--- a/index.html
+++ b/index.html
@@ -634,75 +634,96 @@
             </div>
         </section>
 
-        <!-- Топ донатеров -->
-        <section class="donors-section">
-            <div class="donors-grid">
-                <div class="donor-card">
-                    <div class="donor-header">
-                        <i class="fab fa-twitch"></i>
-                        <h3>Топ донатеры Twitch</h3>
+        <!-- Топ донатеров Twitch -->
+        <section class="twitch-donors-section">
+            <div class="section-header">
+                <h2><i class="fab fa-twitch"></i> Топ донатеры Twitch</h2>
+            </div>
+            <div class="twitch-donors-grid">
+                <div class="twitch-donor-item">
+                    <div class="donor-cup">
+                        <i class="fas fa-trophy gold"></i>
                     </div>
-                    <div class="donor-list">
-                        <div class="donor-item">
-                            <span class="donor-rank">#1</span>
-                            <span class="donor-name">TwitchUser1</span>
-                            <span class="donor-amount">5000 ₽</span>
-                        </div>
-                        <div class="donor-item">
-                            <span class="donor-rank">#2</span>
-                            <span class="donor-name">TwitchUser2</span>
-                            <span class="donor-amount">3500 ₽</span>
-                        </div>
-                        <div class="donor-item">
-                            <span class="donor-rank">#3</span>
-                            <span class="donor-name">TwitchUser3</span>
-                            <span class="donor-amount">2800 ₽</span>
-                        </div>
-                        <div class="donor-item">
-                            <span class="donor-rank">#4</span>
-                            <span class="donor-name">TwitchUser4</span>
-                            <span class="donor-amount">1900 ₽</span>
-                        </div>
-                        <div class="donor-item">
-                            <span class="donor-rank">#5</span>
-                            <span class="donor-name">TwitchUser5</span>
-                            <span class="donor-amount">1200 ₽</span>
-                        </div>
+                    <div class="donor-info">
+                        <div class="donor-name">TwitchUser1</div>
+                        <div class="donor-amount">5000 ₽</div>
                     </div>
                 </div>
-                
-                <div class="donor-card">
-                    <div class="donor-header">
-                        <i class="fas fa-heart"></i>
-                        <h3>Топ донатеры Boosty</h3>
+                <div class="twitch-donor-item">
+                    <div class="donor-cup">
+                        <i class="fas fa-trophy silver"></i>
                     </div>
-                    <div class="donor-list">
-                        <div class="donor-item">
-                            <span class="donor-rank">#1</span>
-                            <span class="donor-name">BoostyUser1</span>
-                            <span class="donor-amount">7200 ₽</span>
-                        </div>
-                        <div class="donor-item">
-                            <span class="donor-rank">#2</span>
-                            <span class="donor-name">BoostyUser2</span>
-                            <span class="donor-amount">4800 ₽</span>
-                        </div>
-                        <div class="donor-item">
-                            <span class="donor-rank">#3</span>
-                            <span class="donor-name">BoostyUser3</span>
-                            <span class="donor-amount">3600 ₽</span>
-                        </div>
-                        <div class="donor-item">
-                            <span class="donor-rank">#4</span>
-                            <span class="donor-name">BoostyUser4</span>
-                            <span class="donor-amount">2400 ₽</span>
-                        </div>
-                        <div class="donor-item">
-                            <span class="donor-rank">#5</span>
-                            <span class="donor-name">BoostyUser5</span>
-                            <span class="donor-amount">1800 ₽</span>
-                        </div>
+                    <div class="donor-info">
+                        <div class="donor-name">TwitchUser2</div>
+                        <div class="donor-amount">3500 ₽</div>
                     </div>
+                </div>
+                <div class="twitch-donor-item">
+                    <div class="donor-cup">
+                        <i class="fas fa-trophy bronze"></i>
+                    </div>
+                    <div class="donor-info">
+                        <div class="donor-name">TwitchUser3</div>
+                        <div class="donor-amount">2800 ₽</div>
+                    </div>
+                </div>
+                <div class="twitch-donor-item">
+                    <div class="donor-cup">
+                        <i class="fas fa-trophy gray"></i>
+                    </div>
+                    <div class="donor-info">
+                        <div class="donor-name">TwitchUser4</div>
+                        <div class="donor-amount">1900 ₽</div>
+                    </div>
+                </div>
+                <div class="twitch-donor-item">
+                    <div class="donor-cup">
+                        <i class="fas fa-trophy gray"></i>
+                    </div>
+                    <div class="donor-info">
+                        <div class="donor-name">TwitchUser5</div>
+                        <div class="donor-amount">1200 ₽</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Призыв к донату -->
+        <section class="donate-call-section">
+            <div class="donate-call-content">
+                <h2><i class="fas fa-heart"></i> Хочешь сюда?</h2>
+                <p>Поддержи стримера и попади в топ донатеров!</p>
+                <div class="donate-buttons">
+                    <a href="https://www.donationalerts.com/r/arthur31" target="_blank" class="donate-btn alerts">
+                        <i class="fas fa-coins"></i> DonationAlerts
+                    </a>
+                    <a href="https://new.donatepay.ru/@SEGAZBS" target="_blank" class="donate-btn pay">
+                        <i class="fas fa-gift"></i> DonatePay
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Топ помощников стримера -->
+        <section class="helpers-section">
+            <div class="section-header">
+                <h2><i class="fas fa-users"></i> Топ помощников стримера</h2>
+            </div>
+            <div class="helpers-list">
+                <div class="helper-item">
+                    <div class="helper-name">Helper1</div>
+                </div>
+                <div class="helper-item">
+                    <div class="helper-name">Helper2</div>
+                </div>
+                <div class="helper-item">
+                    <div class="helper-name">Helper3</div>
+                </div>
+                <div class="helper-item">
+                    <div class="helper-name">Helper4</div>
+                </div>
+                <div class="helper-item">
+                    <div class="helper-name">Helper5</div>
                 </div>
             </div>
         </section>
